--- a/Dockerfile.fedora-25
+++ b/Dockerfile.fedora-25
@@ -41,7 +41,7 @@ COPY container-ipa.target ipa-server-configure-first.service ipa-server-upgrade.
 RUN rmdir -v /etc/systemd/system/multi-user.target.wants \
 	&& mkdir /etc/systemd/system/container-ipa.target.wants \
 	&& ln -s /etc/systemd/system/container-ipa.target.wants /etc/systemd/system/multi-user.target.wants
-RUN yum upgrade
+RUN yum -y upgrade
 RUN systemctl set-default container-ipa.target
 RUN systemctl enable ipa-server-configure-first.service
 
